force-app/main/default/objects/TestTool__mdt/fields/JobTemplate__c.field-meta.xml
<CustomField>
    <fullName>JobTemplate__c</fullName>
    <label>Job Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>