force-app/main/default/objects/TestTool__mdt/fields/Test_Readiness_Logic__c.field-meta.xml
<CustomField>
    <fullName>Test_Readiness_Logic__c</fullName>
    <inlineHelpText>API Name of the apex class that validates if the test configuration is complete and ready to run. This validation is triggered when a user tries to mark the test as Ready to Run. If the validation fails, the test cannot be marked as Ready To Run until the user completes the missing configuration. The apex class must inherit the interface with name “TestReadinessInterface”.</inlineHelpText>
    <label>Test Readiness Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>