force-app/main/default/objects/TestTool__mdt/fields/TestType__c.field-meta.xml
<CustomField>
    <fullName>TestType__c</fullName>
    <label>Test Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>