force-app/main/default/objects/TestTool__mdt/fields/UserStoryBundleTestsUnifierLogic__c.field-meta.xml
<CustomField>
    <fullName>UserStoryBundleTestsUnifierLogic__c</fullName>
    <inlineHelpText>API Name of the apex class that unifies all the tests record related to user stories that are bundled. The apex class must extend the class with name “UserStoryBundleTestsUnifier”.</inlineHelpText>
    <label>User Story Bundle Tests Unifier Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>